--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.7.2",
     "reflect-metadata": "^0.2.0",
+    "reflector": "^0.0.4",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
